# w20_telemetry

./: README.md  pyproject.toml
src/: upload2azure.py
tests/: test_upload2azure.py
